add 3-level preview data fetching to startup window

--- a/releasenotes.html
+++ b/releasenotes.html
@@ -298,7 +298,7 @@ G8YZktwAAAAASUVORK5CYII="
 alt="The initial startup window as it appears on macOS" width="629" height="422">
 				<figcaption>Windows, Linux and BSD (if built with GTK support) have similar startup windows with the same options.</figcaption>
 			</figure>
-			<p>You will now need to import the game data from a commercial release of Witchaven as the game will not work without it.<p>
+			<p>You will now need to import the game data from a commercial release or the <a href="https://www.jonof.id.au/files/jfwhaven/whcdpreview.zip">3-level preview version</a> of Witchaven as the game will not work without it.<p>
 			<ol>
 				<li>Click the "Choose a location..." button, then navigate to a location where Witchaven data can be found.</li>
 				<li>Choose a folder and JFWitchaven will then scan the location you've selected, copying any compatible game data it finds.</li>
@@ -311,6 +311,17 @@ alt="The initial startup window as it appears on macOS" width="629" height="422"
 				<li>(macOS, single user) <code>~/Library/Application Support/JFWitchaven</code></li>
 				<li>(Windows) <em>wherever you've put whaven.exe</em></li>
 			</ul>
+			<p>Below are known locations of Witchaven game data for various sources:</p>
+			<dl>
+				<dt>MS DOS Registered version CD-ROM</dt>
+				<dd>In the <code>WHAVEN</code> directory of the disc.</dd>
+				<dt>Registered version from GOG.com on Windows</dt>
+				<dd>In GOG Galaxy 2, go to <em>Witchaven</em>, open the 'options' menu (beside Play), choose <em>Manage installation</em> &gt; <em>Show folder</em>. Make note of this location to use for importing.</dd>
+				<dt>Registered version from Steam on Windows</dt>
+				<dd>In Steam, go to <em>Witchaven</em>, open the 'gear' menu, choose <em>Manage</em> &gt; <em>Browse local files</em>. Make note of this location to use for importing.</dd>
+				<dt>MS DOS 3-level Preview version</dt>
+				<dd>You can fetch <a href="https://www.jonof.id.au/files/jfwhaven/whcdpreview.zip">whcdpreview.zip from my site</a> ready to unzip and point JFWitchaven at for importing.</dd>
+			</dl>
 
 			<h2 id="portable-install">"Portable" Installation</h2>
 			<p>Typically the game will store its configuration information and saved games in a private location for your user account:</p>
